# popasound

./: Cargo.toml  README.md  build.rs  icon.rc
src/: library.rs  main.rs  myinstants.rs  settings.rs
static/: index.html  input.css  output.css
